[backend] Fix crash if two same mac addresses for an endpoint